--- a/css/styles.css
+++ b/css/styles.css
@@ -80,6 +80,10 @@
   background-color: var(--bs-yellow);
 }
 
+.portfolio-item-subheading {
+  
+}
+
 body {
   margin: 0;
   font-family: var(--bs-body-font-family);
