--- a/css/styles.css
+++ b/css/styles.css
@@ -593,6 +593,7 @@ html {
 .masthead .masthead-heading {
   font-size: 2.75rem;
   line-height: 2.75rem;
+  font-family: 'Rock Salt', cursive;
 }
 .masthead .masthead-subheading {
   font-size: 2rem;
@@ -668,7 +669,7 @@ html {
 
 .footer {
   padding-top: 4rem;
-  padding-bottom: 3rem;
+  padding-bottom: 1rem;
   background-color: #2c3e50;
   color: #fff;
 }
