--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@
   --bs-pink: #d63384;
   --bs-red: #dc3545;
   --bs-orange: #fd7e14;
-  --bs-yellow: #ddd5bb;
+  --bs-yellow: #E4DFC1;
   --bs-green: #198754;
   --bs-teal: rgb(17, 24, 32);
   --bs-cyan: #0dcaf0;
