--- a/css/styles.css
+++ b/css/styles.css
@@ -245,11 +245,11 @@ sup {
 }
 
 a {
-  color: #1abc9c;
+  color: #138870;
   text-decoration: underline;
 }
 a:hover {
-  color: #15967d;
+  color: #138870;
 }
 
 a:not([href]):not([class]), a:not([href]):not([class]):hover {
